# ss-madou-kr-patcher

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
assets/: glyph_mapping.csv
src/: lib.rs  main.rs  pipeline.rs
src/commands/: build.rs  decode.rs  diff.rs  disasm.rs  disc.rs  font.rs  mod.rs  text.rs
src/compression/: cnx.rs  cnx_tests.rs  mod.rs
src/disasm/: address.rs  address_tests.rs  analysis.rs  analysis_tests.rs  linear.rs  linear_tests.rs  literal_pool.rs  literal_pool_tests.rs  mod.rs  recursive.rs  recursive_tests.rs  xref.rs  xref_tests.rs
src/disc/: bps.rs  bps_tests.rs  edc_ecc.rs  edc_ecc_tests.rs  ip_bin.rs  ip_bin_tests.rs  iso9660.rs  iso9660_tests.rs  mod.rs  sector.rs  sector_tests.rs  test_helpers.rs  tracked.rs  tracked_regions.rs  tracked_regions_tests.rs  tracked_tests.rs
src/font/: battle_menu.rs  battle_ui.rs  grid.rs  grid_tests.rs  korean.rs  korean_tests.rs  levelup.rs  mod.rs  prologue.rs  tile.rs  tile_tests.rs
src/output/: listing.rs  listing_tests.rs  mod.rs
src/sh2/: decode.rs  decode_tests.rs  display.rs  display_tests.rs  instruction.rs  instruction_tests.rs  mod.rs
src/text/: glyph.rs  glyph_tests.rs  mod.rs  overflow.rs  overflow_tests.rs  patcher.rs  patcher_tests.rs  scanner.rs  scanner_tests.rs  script.rs  script_tests.rs  seq.rs  seq_tests.rs  sjis.rs  sjis_tests.rs  translation_scan.rs
tests/: build_rom_integration.rs  pipeline_roundtrip.rs
