[package]
name = "ss_madou"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
encoding_rs = "0.8"
png = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
fontdue = "0.9"
regex = "1"
crc32fast = "1"
